--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
             - ./node_modules
   deploy:
     docker:
-      - image: circleci/node:10.6.3
+      - image: circleci/node:latest
     steps:
       - run:
           name: deploy-application
