--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,4 +48,4 @@ jobs:
     steps:
       - run:
           name: deploy-application
-          command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS export SERVER=\"$SERVER\"; export PRIVATE_KEY=\"$PRIVATE_KEY\"; "rm -rf ExampleApplication1/;git clone https://github.com/SJNCI1/ExampleApplication1.git ; source ExampleApplication1/deploy.sh"
+          command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "export SERVER=\"$SERVER\"; export PRIVATE_KEY=\"$PRIVATE_KEY\"; rm -rf ExampleApplication1/; git clone https://github.com/SJNCI1/ExampleApplication1.git ; source ExampleApplication1/deploy.sh"
